docs/draft/v2/02.00_Anvil_Core_Layer.md
# Anvil — Core Layer

The core layer provides foundational services used by all other Anvil modules.
It has zero plugin dependencies — only Neovim built-in APIs.

## Architecture

```
lua/anvil/core/
├── env.lua        # .env file loader + environment variable access
├── cache.lua      # in-memory cache with TTL
├── logger.lua     # structured logging
├── events.lua     # internal event bus
├── options.lua    # vim.opt / vim.g settings
├── autocmds.lua   # global autocommands
├── keys.lua       # centralized keymap registration
└── icons.lua      # unified icon set

lua/anvil/
├── init.lua       # boot sequence
└── config.lua     # user-facing configuration schema
```

## Dependency Rules

```
core/*   → depends on NOTHING (only vim.* APIs)
config   → depends on core/env
init     → depends on config, core/*, lang, platform
ai/*     → depends on core/env, core/cache, core/logger, core/events
lang/*   → depends on core/logger, core/events
editor/  → depends on core/keys, core/icons
ui/      → depends on core/icons, core/events, config
```

No circular dependencies. Core modules may depend on each other only in this
order: `env → logger → cache → events → everything else`.

## Environment Variables

### `lua/anvil/core/env.lua`

<!-- file: lua/anvil/core/env.lua -->
```lua
--- Anvil environment variable loader
--- Loads from OS environment and .env files
--- No dependencies on other Anvil modules
---@class AnvilCoreEnv
local M = {}

---@type table<string, string>
M._cache = {}

---@type boolean
M._loaded = false

--- Load .env file into cache
--- Supports: KEY=VALUE, KEY="VALUE", KEY='VALUE', comments (#), empty lines
---@param path string
---@return boolean success
local function load_dotenv(path)
  if vim.fn.filereadable(path) ~= 1 then return false end

  for _, line in ipairs(vim.fn.readfile(path)) do
    line = vim.trim(line)
    if line ~= "" and not line:match("^#") then
      local key, value = line:match("^([%w_]+)%s*=%s*(.*)$")
      if key and value then
        value = value:gsub("^[\"'](.-)[\"']$", "%1")
        if not line:match("^[%w_]+%s*=%s*[\"']") then
          value = value:gsub("%s+#.*$", "")
        end
        M._cache[key] = value
      end
    end
  end

  return true
end

--- Load environment from multiple .env files
--- Priority: OS env > project .env.local > project .env > config .env
function M.load()
  if M._loaded then return end

  local config_env = vim.fn.stdpath("config") .. "/.env"
  local project_env = vim.fn.getcwd() .. "/.env"
  local project_env_local = vim.fn.getcwd() .. "/.env.local"

  load_dotenv(config_env)
  load_dotenv(project_env)
  load_dotenv(project_env_local)

  M._loaded = true
end

--- Get an environment variable
--- Priority: OS environment > .env files > default
---@param name string variable name
---@param default? string default value if not found
---@return string
function M.get(name, default)
  local os_val = os.getenv(name)
  if os_val and os_val ~= "" then return os_val end

  if not M._loaded then M.load() end

  local env_val = M._cache[name]
  if env_val and env_val ~= "" then return env_val end

  return default or ""
end

--- Get an environment variable as a number
---@param name string variable name
---@param default? number default value
---@return number
function M.get_number(name, default)
  local val = M.get(name, "")
  if val == "" then return default or 0 end
  return tonumber(val) or default or 0
end

--- Get an environment variable as a boolean
--- Truthy: "1", "true", "yes", "on"
---@param name string variable name
---@param default? boolean default value
---@return boolean
function M.get_bool(name, default)
  local val = M.get(name, "")
  if val == "" then return default or false end
  val = val:lower()
  return val == "1" or val == "true" or val == "yes" or val == "on"
end

--- Check if a variable is set (non-empty)
---@param name string
---@return boolean
function M.is_set(name)
  return M.get(name, "") ~= ""
end

--- Reload .env files (useful after changing directory)
function M.reload()
  M._cache = {}
  M._loaded = false
  M.load()
end

--- Get all loaded variables (for debugging)
---@return table<string, string>
function M.all()
  if not M._loaded then M.load() end
  return vim.deepcopy(M._cache)
end

return M
```

## Logger

### `lua/anvil/core/logger.lua`

<!-- file: lua/anvil/core/logger.lua -->
```lua
--- Anvil structured logger
--- Provides leveled logging with optional file output
--- Depends on: nothing (uses vim.notify and vim.fn)
---@class AnvilCoreLogger
local M = {}

---@alias AnvilLogLevel "trace"|"debug"|"info"|"warn"|"error"

---@type table<AnvilLogLevel, number>
local LEVELS = { trace = 0, debug = 1, info = 2, warn = 3, error = 4 }

---@type table<AnvilLogLevel, number>
local VIM_LEVELS = {
  trace = vim.log.levels.DEBUG,
  debug = vim.log.levels.DEBUG,
  info  = vim.log.levels.INFO,
  warn  = vim.log.levels.WARN,
  error = vim.log.levels.ERROR,
}

---@class AnvilLoggerConfig
---@field level AnvilLogLevel
---@field to_file boolean
---@field file_path? string
---@field notify boolean
---@field prefix string
M._config = {
  level   = "info",
  to_file = false,
  file_path = nil,
  notify  = true,
  prefix  = "Anvil",
}

--- Setup logger
---@param opts? AnvilLoggerConfig
function M.setup(opts)
  M._config = vim.tbl_deep_extend("force", M._config, opts or {})
  if M._config.to_file and not M._config.file_path then
    M._config.file_path = vim.fn.stdpath("log") .. "/anvil.log"
  end
end

--- Check if a level is enabled
---@param level AnvilLogLevel
---@return boolean
local function is_enabled(level)
  return LEVELS[level] >= LEVELS[M._config.level]
end

--- Format a log message
---@param level AnvilLogLevel
---@param msg string
---@param ... any format arguments
---@return string
local function format_msg(level, msg, ...)
  local formatted = select("#", ...) > 0 and string.format(msg, ...) or msg
  return string.format("[%s][%s] %s", M._config.prefix, level:upper(), formatted)
end

--- Write to log file
---@param formatted string
local function write_file(formatted)
  if not M._config.to_file or not M._config.file_path then return end
  local timestamp = os.date("%Y-%m-%d %H:%M:%S")
  local line = timestamp .. " " .. formatted
  local file = io.open(M._config.file_path, "a")
  if file then
    file:write(line .. "\n")
    file:close()
  end
end

--- Log at a specific level
---@param level AnvilLogLevel
---@param msg string
---@param ... any format arguments
local function log(level, msg, ...)
  if not is_enabled(level) then return end
  local formatted = format_msg(level, msg, ...)
  write_file(formatted)
  if M._config.notify and LEVELS[level] >= LEVELS["warn"] then
    vim.schedule(function()
      vim.notify(formatted, VIM_LEVELS[level], { title = M._config.prefix })
    end)
  end
end

function M.trace(msg, ...) log("trace", msg, ...) end
function M.debug(msg, ...) log("debug", msg, ...) end
function M.info(msg, ...)  log("info", msg, ...) end
function M.warn(msg, ...)  log("warn", msg, ...) end
function M.error(msg, ...) log("error", msg, ...) end

--- Create a child logger with a sub-prefix
---@param sub_prefix string
---@return table logger-like table with trace/debug/info/warn/error
function M.child(sub_prefix)
  local child = {}
  local full_prefix = M._config.prefix .. ":" .. sub_prefix
  for _, level in ipairs({ "trace", "debug", "info", "warn", "error" }) do
    child[level] = function(msg, ...)
      if not is_enabled(level) then return end
      local formatted = string.format(
        "[%s][%s] %s", full_prefix, level:upper(),
        select("#", ...) > 0 and string.format(msg, ...) or msg
      )
      write_file(formatted)
      if M._config.notify and LEVELS[level] >= LEVELS["warn"] then
        vim.schedule(function()
          vim.notify(formatted, VIM_LEVELS[level], { title = full_prefix })
        end)
      end
    end
  end
  return child
end

return M
```

## Cache

### `lua/anvil/core/cache.lua`

<!-- file: lua/anvil/core/cache.lua -->
```lua
--- Anvil in-memory cache with TTL
--- Depends on: nothing
---@class AnvilCoreCache
local M = {}

---@class AnvilCacheEntry
---@field value any
---@field expires number unix timestamp (0 = never expires)

---@type table<string, AnvilCacheEntry>
M._store = {}

--- Get a cached value
---@param key string
---@return any? value (nil if not found or expired)
function M.get(key)
  local entry = M._store[key]
  if not entry then return nil end
  if entry.expires > 0 and os.time() > entry.expires then
    M._store[key] = nil
    return nil
  end
  return entry.value
end

--- Set a cached value
---@param key string
---@param value any
---@param ttl? number time-to-live in seconds (0 or nil = never expires)
function M.set(key, value, ttl)
  M._store[key] = {
    value   = value,
    expires = (ttl and ttl > 0) and (os.time() + ttl) or 0,
  }
end

--- Get a cached value, or compute and cache it
---@param key string
---@param fn function(): any computation function
---@param ttl? number time-to-live in seconds
---@return any
function M.get_or_set(key, fn, ttl)
  local value = M.get(key)
  if value ~= nil then return value end
  value = fn()
  M.set(key, value, ttl)
  return value
end

--- Delete a cached value
---@param key string
function M.del(key)
  M._store[key] = nil
end

--- Delete all entries matching a pattern
---@param pattern string Lua pattern
function M.del_pattern(pattern)
  local to_delete = {}
  for key in pairs(M._store) do
    if key:match(pattern) then
      to_delete[#to_delete + 1] = key
    end
  end
  for _, key in ipairs(to_delete) do
    M._store[key] = nil
  end
end

--- Clear all cached values
function M.clear()
  M._store = {}
end

--- Remove expired entries
---@return number count of removed entries
function M.gc()
  local now = os.time()
  local removed = 0
  local to_delete = {}
  for key, entry in pairs(M._store) do
    if entry.expires > 0 and now > entry.expires then
      to_delete[#to_delete + 1] = key
      removed = removed + 1
    end
  end
  for _, key in ipairs(to_delete) do
    M._store[key] = nil
  end
  return removed
end

--- Get cache statistics
---@return { total: number, expired: number, active: number }
function M.stats()
  local total = 0
  local expired = 0
  local now = os.time()
  for _, entry in pairs(M._store) do
    total = total + 1
    if entry.expires > 0 and now > entry.expires then
      expired = expired + 1
    end
  end
  return { total = total, expired = expired, active = total - expired }
end

return M
```

## Event Bus

### `lua/anvil/core/events.lua`

<!-- file: lua/anvil/core/events.lua -->
```lua
--- Anvil internal event bus
--- Decouples modules via publish/subscribe pattern
--- Uses Neovim's User autocmd under the hood
--- Depends on: nothing
---@class AnvilCoreEvents
local M = {}

---@type number
M._augroup = nil

--- Setup event system
function M.setup()
  M._augroup = vim.api.nvim_create_augroup("Anvil", { clear = true })
end

--- Emit an event
--- Creates a Neovim User autocmd event with pattern "Anvil:<event>"
---@param event string event name (e.g. "ready", "lang:attached")
---@param data? any event data
function M.emit(event, data)
  vim.api.nvim_exec_autocmds("User", {
    pattern = "Anvil:" .. event,
    data = data,
  })
end

--- Subscribe to an event
---@param event string event name
---@param callback function(args: table) handler function
---@param opts? { once?: boolean, desc?: string }
---@return number autocmd id (for unsubscribing)
function M.on(event, callback, opts)
  opts = opts or {}
  return vim.api.nvim_create_autocmd("User", {
    group = M._augroup,
    pattern = "Anvil:" .. event,
    callback = function(args) callback(args) end,
    once = opts.once or false,
    desc = opts.desc or ("Anvil event: " .. event),
  })
end

--- Subscribe to an event (fires only once)
---@param event string event name
---@param callback function(args: table)
---@return number autocmd id
function M.once(event, callback)
  return M.on(event, callback, { once = true })
end

--- Unsubscribe from an event
---@param id number autocmd id returned by on()
function M.off(id)
  pcall(vim.api.nvim_del_autocmd, id)
end

return M
```

## Options

### `lua/anvil/core/options.lua`

<!-- file: lua/anvil/core/options.lua -->
```lua
--- Anvil vim options
--- Centralized vim.opt and vim.g settings
--- Depends on: nothing
---@class AnvilCoreOptions
local M = {}

--- Default options
---@type table
M.defaults = {
  opt = {
    -- Display
    relativenumber = true,
    number         = true,
    signcolumn     = "yes",
    wrap           = false,
    cursorline     = true,
    termguicolors  = true,
    showmode       = false,
    cmdheight      = 0,
    pumheight      = 15,
    showtabline    = 2,

    -- Indentation
    tabstop     = 2,
    shiftwidth  = 2,
    softtabstop = 2,
    expandtab   = true,
    smartindent = true,

    -- Search
    ignorecase = true,
    smartcase  = true,
    hlsearch   = true,
    incsearch  = true,

    -- Performance
    updatetime = 100,
    timeoutlen = 300,

    -- Files
    swapfile    = false,
    backup      = false,
    undofile    = true,
    writebackup = false,

    -- Splits
    splitbelow = true,
    splitright = true,

    -- Scroll
    scrolloff     = 8,
    sidescrolloff = 8,

    -- Folding (treesitter)
    foldmethod     = "expr",
    foldexpr       = "v:lua.vim.treesitter.foldexpr()",
    foldlevel      = 99,
    foldlevelstart = 99,
    foldenable     = true,

    -- Clipboard
    clipboard = "unnamedplus",

    -- Completion
    completeopt = { "menu", "menuone", "noselect" },

    -- Concealing (for markdown etc.)
    conceallevel = 2,
  },

  g = {
    loaded_python3_provider = 0,
    loaded_perl_provider    = 0,
    loaded_ruby_provider    = 0,
    loaded_node_provider    = 0,
  },
}

--- Apply options
---@param overrides? table user overrides in the same format
function M.apply(overrides)
  local config = vim.tbl_deep_extend("force", M.defaults, overrides or {})

  if config.opt then
    for key, value in pairs(config.opt) do
      local ok, err = pcall(function() vim.opt[key] = value end)
      if not ok then
        vim.notify(
          string.format("[Anvil] Failed to set option '%s': %s", key, err),
          vim.log.levels.WARN
        )
      end
    end
  end

  if config.g then
    for key, value in pairs(config.g) do
      vim.g[key] = value
    end
  end
end

return M
```

## Autocommands

### `lua/anvil/core/autocmds.lua`

<!-- file: lua/anvil/core/autocmds.lua -->
```lua
--- Anvil global autocommands
--- Depends on: core/events (optional, for emitting)
---@class AnvilCoreAutocmds
local M = {}

--- Setup global autocommands
function M.setup()
  local augroup = vim.api.nvim_create_augroup("AnvilAutocmds", { clear = true })

  -- ─── Highlight on yank ───
  vim.api.nvim_create_autocmd("TextYankPost", {
    group = augroup,
    desc = "Highlight yanked text",
    callback = function()
      vim.highlight.on_yank({ higroup = "IncSearch", timeout = 200 })
    end,
  })

  -- ─── Auto-resize splits ───
  vim.api.nvim_create_autocmd("VimResized", {
    group = augroup,
    desc = "Auto-resize panes on terminal resize",
    callback = function() vim.cmd("tabdo wincmd =") end,
  })

  -- ─── Trim trailing whitespace ───
  vim.api.nvim_create_autocmd("BufWritePre", {
    group = augroup,
    desc = "Trim trailing whitespace on save",
    callback = function()
      local save_cursor = vim.fn.getpos(".")
      vim.cmd([[%s/\s\+$//e]])
      vim.fn.setpos(".", save_cursor)
    end,
  })

  -- ─── .env file detection ───
  vim.api.nvim_create_autocmd({ "BufRead", "BufNewFile" }, {
    group = augroup,
    pattern = { ".env", ".env.*" },
    desc = "Set filetype for .env files",
    callback = function() vim.bo.filetype = "sh" end,
  })

  -- ─── Large file handling ───
  vim.api.nvim_create_autocmd("BufReadPre", {
    group = augroup,
    desc = "Disable heavy features for large files (>1MB)",
    callback = function(args)
      local ok, stats = pcall(vim.uv.fs_stat, vim.api.nvim_buf_get_name(args.buf))
      if ok and stats and stats.size > 1024 * 1024 then
        vim.b[args.buf].large_buf = true
        vim.opt_local.foldmethod = "manual"
        vim.opt_local.spell = false
        vim.opt_local.syntax = "off"
      end
    end,
  })

  -- ─── Return to last edit position ───
  vim.api.nvim_create_autocmd("BufReadPost", {
    group = augroup,
    desc = "Return to last edit position when opening file",
    callback = function(args)
      local mark = vim.api.nvim_buf_get_mark(args.buf, '"')
      local line_count = vim.api.nvim_buf_line_count(args.buf)
      if mark[1] > 0 and mark[1] <= line_count then
        pcall(vim.api.nvim_win_set_cursor, 0, mark)
      end
    end,
  })

  -- ─── Auto-create parent directories on save ───
  vim.api.nvim_create_autocmd("BufWritePre", {
    group = augroup,
    desc = "Auto-create parent directories when saving",
    callback = function(args)
      local path = vim.fn.fnamemodify(args.file, ":p:h")
      if vim.fn.isdirectory(path) == 0 then
        vim.fn.mkdir(path, "p")
      end
    end,
  })

  -- ─── Reload .env on directory change ───
  vim.api.nvim_create_autocmd("DirChanged", {
    group = augroup,
    desc = "Reload .env when changing directory",
    callback = function()
      local env_ok, env = pcall(require, "anvil.core.env")
      if env_ok then env.reload() end
    end,
  })

  -- ─── Custom filetypes ───
  vim.filetype.add({
    extension = { mdx = "mdx", env = "sh" },
    filename = {
      [".env"]                = "sh",
      [".env.local"]          = "sh",
      [".env.development"]    = "sh",
      [".env.production"]     = "sh",
      [".prettierrc"]         = "json",
      [".eslintrc"]           = "json",
      [".babelrc"]            = "json",
      ["tsconfig.json"]       = "jsonc",
      [".swcrc"]              = "json",
    },
    pattern = {
      ["%.env%.[%w_.-]+"] = "sh",
    },
  })
end

return M
```

## Keymaps

### `lua/anvil/core/keys.lua`

<!-- file: lua/anvil/core/keys.lua -->
```lua
--- Anvil centralized keymap registration
--- Core keymaps with no plugin dependencies
--- Plugin-dependent keymaps go in plugins/*.lua
--- Depends on: nothing
---@class AnvilCoreKeys
local M = {}

--- Leader key definitions (for documentation and which-key)
---@type table<string, string>
M.groups = {
  ["<leader>f"]  = " Find",
  ["<leader>l"]  = " LSP",
  ["<leader>g"]  = " Git",
  ["<leader>a"]  = "󰚩 AI",
  ["<leader>A"]  = "󰚩 AI External",
  ["<leader>o"]  = " Overseer",
  ["<leader>q"]  = " Session",
  ["<leader>b"]  = "󰈔 Buffers",
  ["<leader>u"]  = " UI",
  ["<leader>x"]  = " Diagnostics",
  ["<leader>h"]  = "󰛢 Harpoon",
  ["<leader>t"]  = " Test",
  ["<leader>d"]  = " Debug",
}

--- Setup core keymaps (non-plugin, always available)
---@param user_keys? table user keymap overrides
function M.setup(user_keys)
  local map = vim.keymap.set

  -- ─── Essential (no plugin dependency) ───
  map("n", "<Esc>", "<cmd>nohlsearch<cr>", { desc = "Clear search highlight" })
  map("n", "<leader>w", "<cmd>w<cr>", { desc = "Save" })

  -- ─── Better window navigation ───
  map("n", "<C-h>", "<C-w>h", { desc = "Window left" })
  map("n", "<C-j>", "<C-w>j", { desc = "Window down" })
  map("n", "<C-k>", "<C-w>k", { desc = "Window up" })
  map("n", "<C-l>", "<C-w>l", { desc = "Window right" })

  -- ─── Window resize ───
  map("n", "<C-Up>",    "<cmd>resize +2<cr>",          { desc = "Increase height" })
  map("n", "<C-Down>",  "<cmd>resize -2<cr>",          { desc = "Decrease height" })
  map("n", "<C-Left>",  "<cmd>vertical resize -2<cr>", { desc = "Decrease width" })
  map("n", "<C-Right>", "<cmd>vertical resize +2<cr>", { desc = "Increase width" })

  -- ─── Move lines ───
  map("n", "<A-j>", "<cmd>m .+1<cr>==",        { desc = "Move line down" })
  map("n", "<A-k>", "<cmd>m .-2<cr>==",        { desc = "Move line up" })
  map("v", "<A-j>", ":m '>+1<cr>gv=gv",        { desc = "Move selection down" })
  map("v", "<A-k>", ":m '<-2<cr>gv=gv",        { desc = "Move selection up" })

  -- ─── Better visual paste (don't lose register) ───
  map("v", "p", '"_dP', { desc = "Paste without losing register" })

  -- ─── Stay in visual mode after indent ───
  map("v", "<", "<gv", { desc = "Indent left" })
  map("v", ">", ">gv", { desc = "Indent right" })

  -- ─── Splits ───
  map("n", "<leader>|", "<cmd>vsplit<cr>", { desc = "Vertical split" })
  map("n", "<leader>-", "<cmd>split<cr>",  { desc = "Horizontal split" })

  -- ─── Diagnostic navigation ───
  map("n", "]d", function() vim.diagnostic.goto_next() end, { desc = "Next diagnostic" })
  map("n", "[d", function() vim.diagnostic.goto_prev() end, { desc = "Previous diagnostic" })
  map("n", "<leader>ld", function() vim.diagnostic.open_float() end, { desc = "Line diagnostics" })

  -- ─── Quickfix ───
  map("n", "]q", "<cmd>cnext<cr>", { desc = "Next quickfix" })
  map("n", "[q", "<cmd>cprev<cr>", { desc = "Previous quickfix" })

  -- ─── Toggles ───
  map("n", "<leader>un", function()
    vim.opt.relativenumber = not vim.opt.relativenumber:get()
  end, { desc = "Toggle relative numbers" })

  map("n", "<leader>uw", function()
    vim.opt.wrap = not vim.opt.wrap:get()
  end, { desc = "Toggle word wrap" })

  map("n", "<leader>us", function()
    vim.opt.spell = not vim.opt.spell:get()
  end, { desc = "Toggle spell check" })

  -- ─── Terminal navigation ───
  map("t", "<C-h>", "<cmd>wincmd h<cr>", { desc = "Window left" })
  map("t", "<C-j>", "<cmd>wincmd j<cr>", { desc = "Window down" })
  map("t", "<C-k>", "<cmd>wincmd k<cr>", { desc = "Window up" })
  map("t", "<C-l>", "<cmd>wincmd l<cr>", { desc = "Window right" })
  map("t", "<Esc><Esc>", "<C-\\><C-n>",  { desc = "Exit terminal mode" })
end

return M
```

## Icons

### `lua/anvil/core/icons.lua`

<!-- file: lua/anvil/core/icons.lua -->
```lua
--- Anvil unified icon set
--- Single source of truth for all icons used across the config
--- Depends on: nothing (requires a Nerd Font in terminal)
---@class AnvilCoreIcons
local M = {}

M.diagnostics = {
  error = " ",
  warn  = " ",
  hint  = "󰌵 ",
  info  = "󰋼 ",
}

M.git = {
  added     = " ",
  modified  = " ",
  removed   = " ",
  renamed   = "➡ ",
  untracked = " ",
  ignored   = " ",
  unstaged  = "󰄱 ",
  staged    = " ",
  conflict  = " ",
  branch    = " ",
}

M.file = {
  modified = "●",
  readonly = " ",
  unnamed  = "[No Name]",
  newfile  = " ",
}

M.dap = {
  breakpoint           = " ",
  breakpoint_condition = " ",
  breakpoint_rejected  = " ",
  logpoint             = " ",
  stopped              = "→ ",
}

M.test = {
  passed   = " ",
  failed   = " ",
  running  = " ",
  skipped  = " ",
  unknown  = " ",
  watching = "󰈈 ",
}

M.ui = {
  arrow_right     = "",
  arrow_left      = "",
  separator_right = "",
  separator_left  = "",
  circle          = "●",
  ellipsis        = "…",
  fold_closed     = "",
  fold_open       = "",
  folder          = "󰉋 ",
  folder_open     = "󰝰 ",
}

M.kinds = {
  Text          = "󰉿 ",
  Method        = "󰆧 ",
  Function      = "󰊕 ",
  Constructor   = " ",
  Field         = "󰜢 ",
  Variable      = "󰀫 ",
  Class         = "󰠱 ",
  Interface     = " ",
  Module        = " ",
  Property      = "󰜢 ",
  Unit          = "󰑭 ",
  Value         = "󰎠 ",
  Enum          = " ",
  Keyword       = "󰌋 ",
  Snippet       = " ",
  Color         = "󰏘 ",
  File          = "󰈙 ",
  Reference     = "󰈇 ",
  Folder        = "󰉋 ",
  EnumMember    = " ",
  Constant      = "󰏿 ",
  Struct        = "󰙅 ",
  Event         = " ",
  Operator      = "󰆕 ",
  TypeParameter = " ",
}

M.misc = {
  ai        = "󰚩 ",
  search    = " ",
  gear      = " ",
  lightbulb = "💡",
  rocket    = " ",
  check     = " ",
  cross     = " ",
  clock     = " ",
  lock      = " ",
}

return M
```

## Configuration Schema

### `lua/anvil/config.lua`

Updated with `ui` section supporting colorscheme selection and strategy override.

<!-- file: lua/anvil/config.lua -->
```lua
--- Anvil global configuration
---@class AnvilConfig
local M = {}

---@class AnvilUIConfig
---@field colorscheme? string theme name from registry or any installed theme
---@field strategy? "auto"|"standalone"|"nvchad"|"astronvim" UI strategy override

---@class AnvilUserConfig
---@field languages? string[]
---@field options? table
---@field keys? table
---@field log? AnvilLoggerConfig
---@field ai? table
---@field ui? AnvilUIConfig

---@type AnvilUserConfig
M._defaults = {
  languages = nil,
  options = {},
  keys = {},
  log = {
    level = "info",
    to_file = false,
    notify = true,
    prefix = "Anvil",
  },
  ai = {},
  ui = {
    colorscheme = "catppuccin",
    strategy = "auto",  -- auto-detect framework
  },
}

---@type AnvilUserConfig
M._config = {}

---@param user_opts AnvilUserConfig
---@return AnvilUserConfig
function M.apply(user_opts)
  M._config = vim.tbl_deep_extend("force", M._defaults, user_opts or {})

  local env = require("anvil.core.env")
  local env_log_level = env.get("ANVIL_LOG_LEVEL", "")
  if env_log_level ~= "" then
    M._config.log.level = env_log_level
  end

  return M._config
end

---@return AnvilUserConfig
function M.get()
  return M._config
end

return M
```

--- Anvil user-facing configuration
--- Defines the shape of options passed to anvil.boot()
--- Depends on: core/env
---@class AnvilConfig
local M = {}

---@class AnvilUIConfig
---@field colorscheme? string theme name from registry or any installed theme
---@field strategy? "auto"|"standalone"|"nvchad"|"astronvim" UI strategy override

---@class AnvilUserConfig
---@field languages? string[] enabled language packs (nil = all)
---@field options? table vim.opt / vim.g overrides
---@field keys? table keymap overrides
---@field log? AnvilLoggerConfig logger configuration
---@field ai? table AI layer overrides
---@field ui? AnvilUIConfig UI layer configuration

---@type AnvilUserConfig
M._defaults = {
  languages = nil,

  options = {},
  keys = {},

  log = {
    level   = "info",
    to_file = false,
    notify  = true,
    prefix  = "Anvil",
  },

  ai = {},

  ui = {
    colorscheme = "catppuccin",
    strategy    = "auto",
  },
}

---@type AnvilUserConfig
M._config = {}

--- Apply user configuration over defaults
---@param user_opts AnvilUserConfig
---@return AnvilUserConfig merged config
function M.apply(user_opts)
  M._config = vim.tbl_deep_extend("force", M._defaults, user_opts or {})

  -- Override log level from environment if set
  local env = require("anvil.core.env")
  local env_log_level = env.get("ANVIL_LOG_LEVEL", "")
  if env_log_level ~= "" then
    M._config.log.level = env_log_level
  end

  -- Override colorscheme from environment if set
  local env_theme = env.get("ANVIL_COLORSCHEME", "")
  if env_theme ~= "" then
    M._config.ui.colorscheme = env_theme
  end

  return M._config
end

--- Get current config
---@return AnvilUserConfig
function M.get()
  return M._config
end

return M
```

## Boot Sequence

### `lua/anvil/init.lua`

<!-- file: lua/anvil/init.lua -->
```lua
--- Anvil entry point
--- Orchestrates the boot sequence for all subsystems
---@class Anvil
local M = {}

M._version = "0.1.0"
M._ready = false

--- Boot Anvil
--- Called from the root init.lua: require("anvil").boot({...})
---@param opts? AnvilUserConfig
function M.boot(opts)
  if M._ready then return end

  -- ─── Phase 1: Core (synchronous, instant) ───
  local env = require("anvil.core.env")
  env.load()

  local config = require("anvil.config")
  M.config = config.apply(opts or {})

  local logger = require("anvil.core.logger")
  logger.setup(M.config.log)

  local events = require("anvil.core.events")
  events.setup()

  local options = require("anvil.core.options")
  options.apply(M.config.options)

  require("anvil.core.autocmds").setup()
  require("anvil.core.keys").setup(M.config.keys)

  -- ─── Phase 2: Platform detection ───
  local platform_ok, platform = pcall(require, "anvil.platform")
  if platform_ok then platform.apply() end

  -- ─── Phase 3: Language registration ───
  local lang_ok, lang = pcall(require, "anvil.lang")
  if lang_ok then lang.setup(M.config.languages) end

  -- ─── Phase 4: AI (lazy — initialized on first use) ───
  -- Nothing here; anvil.ai.init loads on demand

  -- ─── Phase 5: Commands ───
  M._register_commands()

  -- ─── Done ───
  M._ready = true
  events.emit("ready", {
    version   = M._version,
    languages = lang_ok and #lang.enabled() or 0,
  })

  logger.info(
    "Anvil v%s ready (%d languages, theme: %s, ui: %s)",
    M._version,
    lang_ok and #lang.enabled() or 0,
    M.config.ui.colorscheme,
    require("anvil.ui").detect_strategy()
  )
end

--- Register user commands
function M._register_commands()
  local cmd = vim.api.nvim_create_user_command

  cmd("Anvil", function(args)
    local sub = args.fargs[1]
    if not sub or sub == "" then
      M._show_menu()
    elseif sub == "health" then
      vim.cmd("checkhealth anvil")
    elseif sub == "version" then
      vim.notify("Anvil v" .. M._version, vim.log.levels.INFO)
    elseif sub == "config" then
      require("anvil.ai.providers").show_config()
    elseif sub == "theme" then
      local theme_name = args.fargs[2]
      if theme_name then
        pcall(vim.cmd.colorscheme, theme_name)
        vim.notify("Theme: " .. theme_name, vim.log.levels.INFO)
      else
        vim.notify("Current theme: " .. vim.g.colors_name, vim.log.levels.INFO)
      end
    elseif sub == "lang" then
      local lang = require("anvil.lang")
      local info = args.fargs[2]
      if info then
        lang.info(info)
      else
        vim.notify("Languages: " .. table.concat(lang.enabled(), ", "), vim.log.levels.INFO)
      end
    elseif sub == "index" then
      require("anvil.ai.context").index_project()
    elseif sub == "cache" then
      local cache = require("anvil.core.cache")
      local stats = cache.stats()
      vim.notify(
        string.format("Cache: %d active, %d expired, %d total",
          stats.active, stats.expired, stats.total),
        vim.log.levels.INFO
      )
    elseif sub == "ui" then
      local ui = require("anvil.ui")
      vim.notify("UI strategy: " .. ui.detect_strategy(), vim.log.levels.INFO)
    else
      vim.notify("Unknown subcommand: " .. sub, vim.log.levels.WARN)
    end
  end, {
    nargs = "*",
    complete = function()
      return { "health", "version", "config", "theme", "lang", "index", "cache", "ui" }
    end,
    desc = "Anvil: Main command hub",
  })

  -- AI commands (delegate to ai.init)
  cmd("AnvilChat", function(a) require("anvil.ai").chat(a) end,
    { nargs = "?", range = true, desc = "Anvil: Open AI chat" })
  cmd("AnvilAsk", function(a) require("anvil.ai").ask(a.args) end,
    { nargs = "+", desc = "Anvil: Ask AI inline" })
  cmd("AnvilIndex", function() require("anvil.ai").index_project() end,
    { desc = "Anvil: Index current project" })
  cmd("AnvilCompletion", function() require("anvil.ai").toggle_completion() end,
    { desc = "Anvil: Toggle AI inline completions" })
end

--- Show main menu
function M._show_menu()
  local items = {
    "chat    — Open AI chat",
    "health  — Run health check",
    "version — Show version",
    "config  — Show AI provider config",
    "theme   — Show/change colorscheme",
    "lang    — Show enabled languages",
    "index   — Index current project",
    "cache   — Show cache statistics",
    "ui      — Show UI strategy",
  }
  vim.ui.select(items, { prompt = "Anvil:" }, function(choice)
    if not choice then return end
    local sub = choice:match("^(%S+)")
    if sub then vim.cmd("Anvil " .. sub) end
  end)
end

return M
```

## Health Check

### `lua/health/anvil.lua`

<!-- file: lua/health/anvil.lua -->
```lua
--- Anvil core health check
--- :checkhealth anvil
local M = {}

function M.check()
  vim.health.start("Anvil Core")

  -- ─── Version ───
  local anvil_ok, anvil = pcall(require, "anvil")
  if anvil_ok then
    vim.health.ok("Anvil loaded (v" .. (anvil._version or "?") .. ")")
    if anvil._ready then
      vim.health.ok("Boot completed")
    else
      vim.health.warn("Boot not completed — was anvil.boot() called?")
    end
  else
    vim.health.error("Failed to load anvil module")
    return
  end

  -- ─── Core modules ───
  vim.health.start("Anvil Core Modules")
  local core_modules = {
    "anvil.core.env", "anvil.core.logger", "anvil.core.cache",
    "anvil.core.events", "anvil.core.options", "anvil.core.autocmds",
    "anvil.core.keys", "anvil.core.icons", "anvil.config",
  }
  for _, mod in ipairs(core_modules) do
    if pcall(require, mod) then
      vim.health.ok(mod)
    else
      vim.health.error(mod .. " — failed to load")
    end
  end

  -- ─── UI Strategy ───
  vim.health.start("Anvil UI")
  local ui_ok, ui = pcall(require, "anvil.ui")
  if ui_ok then
    local strategy = ui.detect_strategy()
    vim.health.ok("UI strategy: " .. strategy)
    vim.health.info("Colorscheme: " .. (vim.g.colors_name or "unknown"))
  end

  -- ─── Environment ───
  vim.health.start("Anvil Environment")
  local env = require("anvil.core.env")

  local config_env = vim.fn.stdpath("config") .. "/.env"
  local project_env = vim.fn.getcwd() .. "/.env"

  if vim.fn.filereadable(config_env) == 1 then
    vim.health.ok("Config .env found: " .. config_env)
  else
    vim.health.info("No config .env at " .. config_env)
  end

  if vim.fn.filereadable(project_env) == 1 then
    vim.health.ok("Project .env found: " .. project_env)
  else
    vim.health.info("No project .env at " .. project_env)
  end

  if env.is_set("AI_API_KEY") then
    vim.health.ok("AI_API_KEY is set")
  else
    vim.health.warn("AI_API_KEY is not set — AI features will not work")
  end

  -- ─── Cache ───
  vim.health.start("Anvil Cache")
  local cache = require("anvil.core.cache")
  local stats = cache.stats()
  vim.health.ok(string.format(
    "%d entries (%d active, %d expired)", stats.total, stats.active, stats.expired
  ))

  -- ─── Languages ───
  vim.health.start("Anvil Languages")
  local lang_ok, lang = pcall(require, "anvil.lang")
  if lang_ok then
    local enabled = lang.enabled()
    local available = lang.available()
    vim.health.ok(string.format("%d enabled out of %d available", #enabled, #available))
    for _, name in ipairs(enabled) do
      local pack = lang.get(name)
      if pack then
        local parts = { name }
        if pack.lsp then parts[#parts + 1] = "LSP:" .. pack.lsp.server end
        if pack.formatter then parts[#parts + 1] = "fmt:" .. pack.formatter.tool end
        if pack.linter then parts[#parts + 1] = "lint:" .. pack.linter.tool end
        if pack.test then parts[#parts + 1] = "test:" .. pack.test.adapter end
        if pack.dap then parts[#parts + 1] = "dap:" .. pack.dap.adapter end
        vim.health.ok(table.concat(parts, " | "))
      end
    end
  else
    vim.health.warn("Language system not loaded")
  end

  -- ─── Neovim version ───
  vim.health.start("Anvil Prerequisites")
  local v = vim.version()
  if v.major > 0 or v.minor >= 10 then
    vim.health.ok(string.format("Neovim %d.%d.%d", v.major, v.minor, v.patch))
  elseif v.minor >= 9 then
    vim.health.ok(string.format("Neovim %d.%d.%d (minimum supported)", v.major, v.minor, v.patch))
  else
    vim.health.error(string.format(
      "Neovim %d.%d.%d — need 0.9+ (recommend 0.10+)", v.major, v.minor, v.patch
    ))
  end

  -- Required external tools
  local required = {
    { "git",  "Git" },
    { "node", "Node.js (for MCP, Mason)" },
    { "npm",  "npm" },
  }
  for _, t in ipairs(required) do
    if vim.fn.executable(t[1]) == 1 then
      vim.health.ok(t[2])
    else
      vim.health.error(t[2] .. " — not found (required)")
    end
  end

  -- Recommended external tools
  local recommended = {
    { "rg",      "ripgrep (fast grep)" },
    { "fd",      "fd (fast find)" },
    { "lazygit", "lazygit (git TUI)" },
    { "delta",   "delta (git diff)" },
  }
  for _, t in ipairs(recommended) do
    if vim.fn.executable(t[1]) == 1 then
      vim.health.ok(t[2])
    else
      vim.health.info(t[2] .. " — not found (recommended)")
    end
  end
end

return M
```

## Root init.lua

### `init.lua`

Entry point at `~/.config/anvil/init.lua`.

<!-- file: init.lua -->
```lua
-- ~/.config/anvil/init.lua
-- Anvil: AI-powered forge for Neovim

-- Bootstrap Anvil core (before plugins load)
require("anvil").boot({
  -- Enabled languages (nil = all available)
  languages = {
    "typescript", "html", "json", "markdown",
    -- "rust",
    -- "go",
    -- "python",
    -- "lua",
    -- "bash",
    -- "docker",
  },

  -- UI configuration
  ui = {
    colorscheme = "catppuccin",  -- "catppuccin", "tokyonight", "rose-pine", "kanagawa"
    strategy    = "auto",        -- "auto", "standalone", "nvchad", "astronvim"
  },

  -- Logger
  log = {
    level   = "info",
    to_file = false,
  },
})
```

## Tests

### `tests/unit/core_spec.lua`

<!-- file: tests/unit/core_spec.lua -->
```lua
-- Minimal tests for core modules
-- Run with: nvim --headless -u tests/minimal_init.lua -c "PlenaryBustedDirectory tests/unit"

describe("anvil.core.env", function()
  local env = require("anvil.core.env")

  before_each(function()
    env._cache = {}
    env._loaded = false
  end)

  it("returns default when variable not set", function()
    assert.equals("fallback", env.get("NONEXISTENT_VAR_12345", "fallback"))
  end)

  it("returns OS environment variable", function()
    local path = env.get("PATH", "")
    assert.is_not.equals("", path)
  end)

  it("get_number returns number", function()
    assert.equals(42, env.get_number("NONEXISTENT_VAR_12345", 42))
  end)

  it("get_bool returns boolean", function()
    assert.is_false(env.get_bool("NONEXISTENT_VAR_12345", false))
  end)

  it("is_set returns false for unset", function()
    assert.is_false(env.is_set("NONEXISTENT_VAR_12345"))
  end)
end)

describe("anvil.core.cache", function()
  local cache = require("anvil.core.cache")

  before_each(function() cache.clear() end)

  it("stores and retrieves values", function()
    cache.set("key1", "value1")
    assert.equals("value1", cache.get("key1"))
  end)

  it("returns nil for missing keys", function()
    assert.is_nil(cache.get("nonexistent"))
  end)

  it("get_or_set computes on miss", function()
    local computed = false
    local val = cache.get_or_set("key2", function()
      computed = true
      return "computed_value"
    end)
    assert.equals("computed_value", val)
    assert.is_true(computed)
  end)

  it("get_or_set returns cached on hit", function()
    cache.set("key3", "cached")
    local computed = false
    local val = cache.get_or_set("key3", function()
      computed = true
      return "new_value"
    end)
    assert.equals("cached", val)
    assert.is_false(computed)
  end)

  it("del removes entry", function()
    cache.set("key4", "value")
    cache.del("key4")
    assert.is_nil(cache.get("key4"))
  end)

  it("del_pattern removes matching entries", function()
    cache.set("project:a", 1)
    cache.set("project:b", 2)
    cache.set("other:c", 3)
    cache.del_pattern("^project:")
    assert.is_nil(cache.get("project:a"))
    assert.is_nil(cache.get("project:b"))
    assert.equals(3, cache.get("other:c"))
  end)

  it("stats returns correct counts", function()
    cache.set("a", 1)
    cache.set("b", 2)
    local stats = cache.stats()
    assert.equals(2, stats.total)
    assert.equals(2, stats.active)
    assert.equals(0, stats.expired)
  end)
end)

describe("anvil.core.logger", function()
  local logger = require("anvil.core.logger")

  it("creates child loggers", function()
    local child = logger.child("test")
    assert.is_function(child.info)
    assert.is_function(child.error)
  end)
end)

describe("anvil.core.icons", function()
  local icons = require("anvil.core.icons")

  it("has all required icon groups", function()
    assert.is_table(icons.diagnostics)
    assert.is_table(icons.git)
    assert.is_table(icons.dap)
    assert.is_table(icons.test)
    assert.is_table(icons.ui)
    assert.is_table(icons.kinds)
    assert.is_table(icons.misc)
  end)

  it("diagnostic icons are non-empty strings", function()
    for _, icon in pairs(icons.diagnostics) do
      assert.is_string(icon)
      assert.is_not.equals("", icon)
    end
  end)
end)
```

### `tests/minimal_init.lua`

<!-- file: tests/minimal_init.lua -->
```lua
vim.opt.rtp:append(".")
vim.opt.rtp:append(vim.fn.stdpath("data") .. "/lazy/plenary.nvim")
vim.cmd("runtime plugin/plenary.vim")
```
